--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,8 +3,8 @@
 */
 
 @font-face {
-  font-family: 'YourFontName';
-  src: url('../font/FontleroyBrownNF.ttf') format('truetype');
+  font-family: 'FERNANTA';
+  src: url('../font/FERNANTA.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
@@ -490,7 +490,7 @@ section,
 .title-span {
   font-weight: 800;
   font-size: 5rem;
-  font-family: 'Spartan', sans-serif;
+  font-family: 'FERNANTA', sans-serif;
   background: linear-gradient(to right, #CA1F3D, #FFBE00, #FFFFFF, #c0191f);
   background-size: 200% auto;
   color: transparent;
